3 Nov 2006 - darshana

    Fixed issue#13 (Nov 4 5pm parses as just 5pm).
    Also fixed "1-8pm" and other ranges which were not working if there were no spaces before and after the '-'.

1 Nov 2006 - darshana
  
    Strings like "Thursday?" were not parsed. Changes made to the regex to
    allow special characters to be parsed after weekday names and month names.

24 Oct 2006 - bear

    0.8.0 release
    Setting trunk to 0.8.1

    Merged in changes from Darshana's change_parse_to_return_enum branch

    This is a big change in that instead of a simple True/False that is
    returned to show if the date is valid or not, Parse() now returns
    a "masked" value that represents what is valid:

        date = 1
        time = 2

    so a value of zero means nothing was parseable/valid and a value of
    3 means both were parsed/valid.

20 Oct 2006 - darshana

   Implemented the CalculateDOWDelta() method in parsedatetime.py
   Added a new flag CurrentDOWParseStyle in parsedatetime_consts.py for the current DOW.

19 Oct 2006 - bear

    Changed birthday epoch to be a constant defined in parsedatetime_const
    Lots of little cosmetic code changes
    Removed the individual files in the docs/ folder
    Added dist, build and parsedatetime-egg.info to svn:ignore

17 Oct 2006 - darshana

    Added birthday epoch constraint
    Fixed date parsing. 3-digit year not allowed now.
    Fixed the unit tests too to either have yy or yyyy.

9 Oct 2006 - bear

    0.7.4 release
    Setting trunk to 0.7.5

5 Oct 2006 - darshana

    Fixed "ago" bug -- Issue #7 http://code.google.com/p/parsedatetime/issues/detail?id=7
    
    Fixed bug where default year for dates that are in the future get next year, not 
    current year -- Issue #8 http://code.google.com/p/parsedatetime/issues/detail?id=8

    Fixed strings like "1 week ago", "lunch tomorrow"
    
25 Sep 2006 - bear

    0.7.3 release
    Setting trunk to 0.7.4

13 Sep 2006 - bear
